# ChipEmul8r

./: CMakeLists.txt  README.md
include/: chip8.h  graphics.h
roms/: graphics.cpp  main.cpp
src/: chip8.cpp  graphics.cpp  main.cpp
